# playbook

./: .gitignore  INSTRUCTIONS.md  PLAYBOOK_FOR_CLAUDE.md  README.md  _sidebar.md  builder.md  index.html  tech-map.md
catalog/: README.md  alembic.md  base.md  calc.md  capture.md  confetti.md  data.md  deploy.md  django.md  dnd-kit.md  drag-rank.md  dynamic-prompt.md  fastapi.md  ga.md  grade.md  haptic.md  htmx.md  jspdf.md  jwt-auth.md  kakao-local.md  kakao.md  llm.md  lottie.md  og.md  pillow-og.md  playwright-scrape.md  pocketbase.md  portone.md  pwa.md  quiz.md  radar.md  rag.md  react-flow.md  redis.md  rel-type.md  reveal.md  screen.md  share.md  sound.md  spectrum.md  (+9 more)
gotchas/: cloudflare-apache.md  css-overflow.md  ec2-oom-swap.md  ec2-security.md  fastapi-sqlalchemy-async.md  tailwind-v4.md  windows-ssh.md
mcp-server/: .env  .env.example  pipeline_test.py  playbook_mcp.py  pyproject.toml  seo_snippet.php  server.py  test_wordpress_mcp.py  wordpress_mcp.py
recipes/: ai-summary-optimization.md  aws-wordpress.md  django-htmx-tailwind.md  fastapi-sqlalchemy-async.md  flask-dashboard.md  github-upload.md  go-single-binary.md  naver-blog-ai-humanizer.md  naver-cafe-comments.md  playbook-mcp-server.md  react-vite-tailwind.md  server-to-github.md  web-security-checklist.md  web-security-prompt-template.md  wordpress-domain-ssl.md
references/: README.md  amazon-report-hub.md  amlife.md  collab-tool.md  dictionary.md  error-automation.md  food.md  hexaconsulting.md  hexalounge.md  human2.md  ideal.md  infra-quote.md  life-sim-rpg.md  love.md  minpharma.md  mz.md  (+21 more)
(+1 files in other folders)
