[project]
name = "playbook-mcp"
version = "0.1.0"
description = "MCP server for ganna40/playbook - fetch modules, references, recipes via Claude Code"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ganna40" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
playbook-mcp = "playbook_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["playbook_mcp.py"]
